Refactoring: Nutzung von List.of()
... statt Collections.xxxList() und Arrays.asList().