@@ -12,7 +12,6 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 
@@ -42,7 +41,7 @@ public class TodoJsonRepositoryTests {
   }
 
   private static List<Todo> createTestData() {
-    return Arrays.asList(
+    return List.of(
         new Todo("119e6785-8ffc-42e0-8df6-dbc64881f2b7", "Taste JavaScript", true),
         new Todo("d2f7760d-8f03-4cb3-9176-06311cb89993", "Buy a unicorn", false));
   }
